# Nuclex.ThinOrm.Native

./: .gitignore  CMakeLists.txt  Dependencies.md  Notice.md  Nuclex.ThinOrm.Native (msvc-14.3).vcxproj  Nuclex.ThinOrm.Native (msvc-14.3).vcxproj.filters  Nuclex.ThinOrm.Native.Tests (msvc-14.3).vcxproj  Nuclex.ThinOrm.Native.Tests (msvc-14.3).vcxproj.filters  ReadMe.md  SConstruct
Include/Nuclex/Database/: Command.h  Config.h  IsolationLevel.h
Include/Nuclex/ThinOrm/: Command.h  Config.h  DataContext.h  Database.h  DatabaseConnection.h  DateTime.h  Decimal.h  IsolationLevel.h  Query.h  QueryParameterView.h  RowReader.h  Value.h  ValueType.h
Include/Nuclex/ThinOrm/Configuration/: ConnectionProperties.h  ConnectionString.h  ConnectionUrl.h  KnownOptions.h  WritableConnectionProperties.h
Include/Nuclex/ThinOrm/Connections/: Connection.h  ConnectionFactory.h  ConnectionPool.h  ContextualConnectionPool.h  Driver.h  DriverBasedConnectionFactory.h  QtSqlConnectionFactory.h  StandardConnectionPool.h  UniqueConnectionPool.h
Include/Nuclex/ThinOrm/Dialects/: DateTimeDialect.h  Dialect.h  QuoteStyle.h
Include/Nuclex/ThinOrm/Drivers/: ConnectionFactory.h  ConnectionPool.h  Driver.h  DriverBasedConnectionFactory.h  QtSqlConnectionFactory.h  StandardConnectionPool.h
Include/Nuclex/ThinOrm/Errors/: AmbiguousSchemaVersionError.h  BadDateFormatError.h  BadParameterNameError.h  BadSqlStatementError.h  BadValueTypeError.h  DowngradeUnsupportedError.h  MissingDriverError.h  UnassignedParameterError.h
Include/Nuclex/ThinOrm/Fluent/: AttributeAccessor.h  ColumnRegistrationSyntax.h  EntityMappingConfigurator.h  GlobalEntityRegistry.h  Queryable.h  Table.h  TableRegistrationSyntax.h
Include/Nuclex/ThinOrm/Migrations/: ContextualMigration.h  GlobalMigrationRepository.h  Migration.h  MigrationRunner.h
Include/Nuclex/ThinOrm/Transactions/: IsolationLevel.h
Source/: Config.cpp  DateTime.cpp  Decimal.cpp  IsolationLevel.cpp  Query.ImmutableState.cpp  Query.ImmutableState.h  Query.Implementation.cpp  Query.Implementation.h  Query.cpp  QueryParameterView.cpp  RowReader.cpp  Value.Conversion.cpp  Value.Operators.cpp  Value.cpp  ValueType.cpp
Source/Configuration/: ConnectionProperties.cpp  ConnectionString.cpp  ConnectionUrl.cpp  KnownOptions.cpp  WritableConnectionProperties.cpp
Source/Connections/: Connection.cpp  ConnectionFactory.cpp  ConnectionPool.cpp  ContextualConnectionPool.cpp  Driver.cpp  DriverBasedConnectionFactory.cpp  QtSqlConnection.cpp  QtSqlConnection.h  QtSqlConnectionFactory.cpp  StandardConnectionPool.cpp  UniqueConnectionPool.cpp
Source/Connections/QtSql/: QtSqlConnection.cpp  QtSqlConnection.h  QtSqlMaterializedQuery.cpp  QtSqlMaterializedQuery.h  QtSqlRowReader.cpp  QtSqlRowReader.h  UniqueNameGenerator.cpp  UniqueNameGenerator.h
Source/Connections/SQLite/: SQLiteConnection.cpp  SQLiteConnection.h  SQLiteDriver.cpp  SQLiteDriver.h
Source/Dialects/: DateTimeDialect.cpp  Dialect.cpp  QuoteStyle.cpp
Source/Drivers/: ConnectionFactory.cpp  ConnectionPool.cpp  Driver.cpp  DriverBasedConnectionFactory.cpp  QtSqlConnectionFactory.cpp  StandardConnectionPool.cpp
Source/Errors/: AmbiguousSchemaVersionError.cpp  BadDateFormatError.cpp  BadParameterNameError.cpp  BadSqlStatementError.cpp  BadValueTypeError.cpp  DowngradeUnsupportedError.cpp  MissingDriverError.cpp  UnassignedParameterError.cpp
Source/Fluent/: AttributeAccessor.cpp  ColumnInfo.h  ColumnRegistrationSyntax.cpp  ColunnInfo.cpp  EntityMappingConfigurator.cpp  GlobalEntityRegistry.Implementation.cpp  GlobalEntityRegistry.Implementation.h  GlobalEntityRegistry.cpp  Queryable.cpp  Table.cpp  TableInfo.cpp  TableInfo.h  TableRegistrationSyntax.cpp
Source/Migrations/: ContextualMigration.cpp  GlobalMigrationRepository.cpp  Migration.cpp  MigrationRunner.cpp
Source/Migrations/Entities/: AppliedMigration.cpp  AppliedMigration.h  MigrationRecord.cpp  MigrationRecord.h
Source/Migrations/Repositories/: AppliedMigrationRepository.cpp  AppliedMigrationRepository.h  MigrationRecordRepository.cpp  MigrationRecordRepository.h
Source/Platform/: SQLite3Api.cpp  SQLite3Api.h
Source/Transactions/: IsolationLevel.cpp
Source/Utilities/: Iso8601Converter.cpp  Iso8601Converter.h  QStringConverter.cpp  QStringConverter.h  QVariantConverter.cpp  QVariantConverter.h  Quantizer.cpp  Quantizer.h
Tests/: DateTimeTest.cpp  QueryTest.cpp  SqlCommandTest.cpp  ValueTest.Conversion.cpp  ValueTest.cpp  ValueTypeTest.cpp
Tests/Configuration/: ConnectionStringTest.cpp  ConnectionUrlTest.cpp
Tests/Connections/QtSql/: QtSqlMaterializedQueryTest.cpp
Tests/Fluent/: AttributeAccessorTest.cpp  GlobalEntityRegistryTest.cpp
Tests/Utilities/: Iso8601ConverterTest.cpp  QStringConverterTest.cpp  QuantizerTest.cpp
